Adds the Higurashi Font.html
VN font added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </select><br><br>
       <label for="timerFont">Timer Font:</label>
       <select name="timerFont" id="timerFont">
+        <option value="sazanami-gothic">Higurashi Font</option>
         <option value="VT323">VT323</option>
         <option value="MontserratBold">Montserrat Bold</option>
         <option value="MontserratBoldItalic">Montserrat Bold Italic</option>
