--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <input type="color" id="color" name="color"><br><br>
       <label for="sessionFont">Session Font:</label>
       <select name="sessionFont" id="sessionFont">
+        <option value="sazanami-gothic">Higurashi Font</option>
         <option value="VT323">VT323</option>
         <option value="MontserratBold">Montserrat Bold</option>
         <option value="MontserratBoldItalic">Montserrat Bold Italic</option>
