--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </select><br><br>
       <label for="alignment">Alignment:</label>
       <select name="alignment" id="alignment">
+        <option value="right">Center</option>
         <option value="left">Left</option>
         <option value="right">Right</option>
       </select>
