--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <div class="formcontainer">
     <form id="myForm">
       <label for="focus">Focus:</label>
-      <input type="number" id="focus" name="focus" min="1" max="60" value="25" required>
+      <input type="number" id="focusSeconds" name="focus" min="1" max="60" value="180" required>
       <label for="focus">min</label><br><br>
       <label for="break">Break:</label>
-      <input type="number" id="break" name="break" min="1" max="60" value="5" required>
+      <input type="number" id="breakSeconds" name="break" min="1" max="60" value="180" required>
       <label for="focus">min</label><br><br>
+      <label for="readySeconds">ready seconds:</label>
+      <input type="number" id="readySeconds" name="readySeconds" min="1" max="20" value="5" required><br><br>
       <label for="reps">Reps:</label>
       <input type="number" id="reps" name="reps" min="1" max="20" value="4" required><br><br>
       <label for="color">Color:</label>
@@ -63,7 +65,7 @@ function updateLinkAndPreview() {
     let timerFont = document.getElementById('timerFont').value;
     let sessionFont = document.getElementById('sessionFont').value;
     let alignment = document.getElementById('alignment').value;
-    let link = `https://muederotter.github.io/timer.html?focus=${focus}&break=${breakTime}&reps=${reps}&color=${encodeURIComponent(color)}&timerFont=${encodeURIComponent(timerFont)}&sessionFont=${encodeURIComponent(sessionFont)}&alignment=${alignment}`;
+    let link = `https://giorcal2d.github.io/timer.html?focusSeconds=${focusSeconds}&breakSeconds=${breakSeconds}&readySeconds=${readySeconds}&reps=${reps}&color=${encodeURIComponent(color)}&timerFont=${encodeURIComponent(timerFont)}&sessionFont=${encodeURIComponent(sessionFont)}&alignment=${alignment}`;
     document.getElementById('link').href = link;
     document.getElementById('link').innerHTML = link;
 
