--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <form id="myForm">
       <label for="focus">Focus:</label>
       <input type="number" id="focusSeconds" name="focus" min="1" max="60" value="180" required>
-      <label for="focus">min</label><br><br>
+      <label for="focus">seconds</label><br><br>
       <label for="break">Break:</label>
       <input type="number" id="breakSeconds" name="break" min="1" max="60" value="180" required>
-      <label for="focus">min</label><br><br>
+      <label for="focus">seconds</label><br><br>
       <label for="readySeconds">ready seconds:</label>
       <input type="number" id="readySeconds" name="readySeconds" min="1" max="20" value="5" required><br><br>
       <label for="reps">Reps:</label>
